[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-token-cache"
version = "0.1.0"
description = "Shared api token cache for lambdas"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src/python"}
packages = ["api_token_cache"]